--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -1,5 +1,11 @@
 # Example Configuration File from "https://hub.docker.com/_/telegraf"
 
+[[outputs.influxdb]]
+  urls = ["http://influxdb:8086"]
+  database = "telegraf"
+  username = "savannah"
+  password = "ILoveAdmin2024!"
+
 [[inputs.exec]]
   interval = "60s"
   commands=["mtr -C -n example.org"]
